--- a/picture only css/styles/index.css
+++ b/picture only css/styles/index.css
@@ -130,6 +130,24 @@
   }
 }
 
+@-webkit-keyframes cloud-move {
+  0% {
+    margin-left: -10%;
+  }
+  100% {
+    margin-left: 120%;
+  }
+}
+
+@keyframes cloud-move {
+  0% {
+    margin-left: -10%;
+  }
+  100% {
+    margin-left: 120%;
+  }
+}
+
 html {
   scroll-behavior: smooth;
   padding: 0;
@@ -163,13 +181,21 @@ body {
 }
 
 .sky .cloud {
+  -webkit-box-shadow: 0px 0px 8px 2px #9ed2ff;
+          box-shadow: 0px 0px 8px 2px #9ed2ff;
+}
+
+.sky .cloud-1 {
   position: fixed;
   top: 20%;
-  left: 75%;
+  left: -20%;
   background: white;
   border-radius: 100px;
-  height: 5%;
-  width: 10%;
+  height: 4%;
+  width: 8%;
+  -webkit-animation: cloud-move 60s linear 1s infinite;
+          animation: cloud-move 60s linear 1s infinite;
+  z-index: 2;
 }
 
 .sky .cloud:after,
@@ -198,12 +224,15 @@ body {
 
 .sky .cloud-2 {
   position: fixed;
-  top: 10%;
-  left: 45%;
+  top: 15%;
+  left: -20%;
   background: white;
   border-radius: 100px;
   height: 5%;
   width: 10%;
+  -webkit-animation: cloud-move 65s linear 5s infinite;
+          animation: cloud-move 65s linear 5s infinite;
+  z-index: 2;
 }
 
 .sky .cloud-2:after,
@@ -233,11 +262,14 @@ body {
 .sky .cloud-3 {
   position: fixed;
   top: 12%;
-  left: 25%;
+  left: -20%;
   background: white;
   border-radius: 100px;
-  height: 5%;
-  width: 10%;
+  height: 4%;
+  width: 9%;
+  -webkit-animation: cloud-move 70s linear 20s infinite;
+          animation: cloud-move 70s linear 20s infinite;
+  z-index: 2;
 }
 
 .sky .cloud-3:after,
@@ -257,6 +289,86 @@ body {
 }
 
 .sky .cloud-3:before {
+  border-radius: 150%;
+  width: 40%;
+  height: 200%;
+  left: 45%;
+  top: -100%;
+}
+
+.sky .cloud-4 {
+  position: fixed;
+  top: 20%;
+  left: -20%;
+  background: white;
+  border-radius: 100px;
+  height: 5%;
+  width: 8%;
+  -webkit-animation: cloud-move 75s linear 15s infinite;
+          animation: cloud-move 75s linear 15s infinite;
+  z-index: 2;
+}
+
+.sky .cloud-4:after,
+.sky .cloud-4:before {
+  background: #fff;
+  content: '';
+  position: absolute;
+  z-indeX: -1;
+}
+
+.sky .cloud-4:after {
+  border-radius: 100%;
+  height: 100%;
+  left: 15%;
+  top: -50%;
+  width: 40%;
+}
+
+.sky .cloud-4:before {
+  border-radius: 150%;
+  width: 40%;
+  height: 200%;
+  left: 45%;
+  top: -100%;
+}
+
+.sky .cloud-5 {
+  position: fixed;
+  top: 30%;
+  left: -20%;
+  background: white;
+  border-radius: 100px;
+  height: 3%;
+  width: 6%;
+  -webkit-animation: cloud-move 80s infinite;
+          animation: cloud-move 80s infinite;
+  -webkit-animation-delay: 20s;
+          animation-delay: 20s;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation: cloud-move 80s linear 25s infinite;
+          animation: cloud-move 80s linear 25s infinite;
+  z-index: 2;
+}
+
+.sky .cloud-5:after,
+.sky .cloud-5:before {
+  background: #fff;
+  content: '';
+  position: absolute;
+  z-indeX: -1;
+}
+
+.sky .cloud-5:after {
+  border-radius: 100%;
+  height: 100%;
+  left: 15%;
+  top: -50%;
+  width: 40%;
+}
+
+.sky .cloud-5:before {
   border-radius: 150%;
   width: 40%;
   height: 200%;
@@ -285,6 +397,7 @@ body {
   background-color: #b1ccdd;
   width: 8%;
   height: 35%;
+  z-index: 3;
 }
 
 .sky .city-back .building-1 .first-part {
@@ -367,7 +480,7 @@ body {
   width: 8%;
   height: 66%;
   margin-left: -11%;
-  z-index: 1;
+  z-index: 3;
   border-radius: 0% 100% 0% 0% / 100% 100% 0% 0%;
 }
 
@@ -388,6 +501,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  z-index: 3;
 }
 
 .sky .city-back .building-5 .block-1 {
@@ -530,7 +644,7 @@ body {
   width: 8%;
   height: 70%;
   margin-left: -15%;
-  z-index: 1;
+  z-index: 3;
   border-radius: 100% 0% 55% 45% / 100% 100% 0% 0%;
 }
 
@@ -552,6 +666,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  z-index: 3;
 }
 
 .sky .city-back .building-9 .first-part {
@@ -671,7 +786,7 @@ body {
   width: 6%;
   height: 66%;
   margin-left: -5%;
-  z-index: 1;
+  z-index: 3;
 }
 
 .sky .city-back .building-11 .up-part {
@@ -716,6 +831,7 @@ body {
   width: 7%;
   height: 55%;
   margin-left: -3%;
+  z-index: 3;
 }
 
 .sky .city-back .building-13 .first-part {
@@ -753,6 +869,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  z-index: 10;
 }
 
 .sky .city-back .building-14 .windows {
@@ -793,6 +910,7 @@ body {
   width: 7%;
   height: 60%;
   margin-left: -3%;
+  z-index: 3;
 }
 
 .sky .city-back .building-16 .first-part {
@@ -911,6 +1029,7 @@ body {
       justify-content: space-around;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  z-index: 3;
 }
 
 .sky .city-back .building-18 .windows {
@@ -926,10 +1045,11 @@ body {
   position: fixed;
   right: 5vw;
   top: 0;
+  z-index: 1;
 }
 
 .sky .sun-block .sun {
-  z-index: 1000;
+  z-index: -1;
   width: 100%;
   height: 100%;
   border-radius: 50%;
